--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
         width: 100%;
         padding-top: 8px;
         box-sizing: border-box;
-        max-height: 75vh;
+        height: 75vh;
+        max-height: 560px;
       }
 
       #header-text {
