--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         margin: 0 auto;
         display: grid;
         grid-template-columns: 240px 1fr;
-        grid-auto-rows: max-content;
+        grid-template-rows: max-content max-content 1fr;
         grid-gap: 4px;
         padding: 8px;
         box-sizing: border-box;
@@ -67,7 +67,7 @@
         margin-top: 1.25rem;
         margin:0;
         align-self: end;
-        margin-left: -4px;
+        margin-left: -2px;
       }
 
       #subtitle {
@@ -75,6 +75,7 @@
         display: block;
         height: 100%;
         grid-column: 1;
+        letter-spacing: -0.055em;
       }
 
       .post-timestamp {
@@ -155,12 +156,13 @@
         grid-column: 1 / 3;
         object-position: center;
         object-fit: cover;
-        height: 100%;
         width: 100%;
-        padding-top: 8px;
+        margin-top: 4px;
         box-sizing: border-box;
-        height: 75vh;
-        max-height: 560px;
+        height: 100%;
+        max-height: 545px;
+        border-radius: 4px;
+        align-self: start;
       }
 
       #header-text {
