Even spacing for image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         grid-template-columns: max-content 1fr;
         grid-template-rows: max-content max-content 1fr;
         grid-gap: 4px;
-        padding: 8px;
+        padding: 1rem;
         box-sizing: border-box;
         height: 100%;
       }
@@ -55,11 +55,7 @@
         font-size: 2rem;
         font-weight: 740;
         letter-spacing: -0.055em;
-        margin-bottom: 0.25rem;
-        margin-top: 1.25rem;
-        margin:0;
         align-self: end;
-        margin-left: -0.125rem;
       }
 
       #github-icon {
@@ -80,7 +76,7 @@
         object-position: center;
         object-fit: cover;
         width: 100%;
-        margin-top: 0.5rem;
+        /* margin-top: 0.5rem; */
         border-radius: 0.25rem;
         box-sizing: border-box;
         height: 100%;
@@ -93,6 +89,7 @@
         align-items: flex-start;
         grid-column: 1;
         font-family: 'inconsolata';
+        margin-bottom: 0.5rem;
       }
 
       .icon-link {
